--- a/templates/index.html
+++ b/templates/index.html
@@ -177,6 +177,11 @@
                 </div>
                 
                 <div class="modal-section">
+                    <h4>Work History</h4>
+                    <div id="modal-work-history"></div>
+                </div>
+                
+                <div class="modal-section">
                     <h4>Wildcard</h4>
                     <p id="modal-wildcard"></p>
                 </div>
@@ -215,6 +220,11 @@
                 <div class="section">
                     <h4>Achievements</h4>
                     <ul class="achievements-list"></ul>
+                </div>
+                
+                <div class="section">
+                    <h4>Work History</h4>
+                    <div class="work-history-list"></div>
                 </div>
                 
                 <div class="section">
