--- a/templates/index.html
+++ b/templates/index.html
@@ -213,13 +213,8 @@
                 </div>
                 
                 <div class="section">
-                    <h4>Fit Indicators</h4>
-                    <ul class="fit-indicators-list"></ul>
-                </div>
-                
-                <div class="section">
-                    <h4>Achievements</h4>
-                    <ul class="achievements-list"></ul>
+                    <h4>Relevant Achievements</h4>
+                    <ul class="relevant-achievements-list"></ul>
                 </div>
                 
                 <div class="section">
