--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
                 </div>
                 
                 <div class="modal-section">
-                    <h4>Reservations</h4>
+                    <h4>Potential Gaps</h4>
                     <ul id="modal-reservations"></ul>
                 </div>
                 
@@ -226,7 +226,12 @@
                 </div>
                 
                 <div class="section">
-                    <h4>Reservations</h4>
+                    <h4>Wildcard</h4>
+                    <p class="wildcard-text"></p>
+                </div>
+                
+                <div class="section">
+                    <h4>Potential Gaps</h4>
                     <ul class="reservations-list"></ul>
                 </div>
                 
@@ -238,11 +243,6 @@
                 <div class="section">
                     <h4>Work History</h4>
                     <div class="work-history-list"></div>
-                </div>
-                
-                <div class="section">
-                    <h4>Wildcard</h4>
-                    <p class="wildcard-text"></p>
                 </div>
                 
                 <div class="section">
